Make sure column for alias list is wrapped

--- a/input/assets/css/override.less
+++ b/input/assets/css/override.less
@@ -193,3 +193,16 @@ ul.share-buttons img{
   height: 12px;
   vertical-align: unset;
 }
+
+// Alias list
+
+.alias-list td {
+  -ms-word-break: break-all;
+  word-break: break-all;
+  word-break: break-word; // Non standard value for WebKit
+  -webkit-hyphens: auto;
+  -moz-hyphens: auto;
+  -ms-hyphens: auto;
+  hyphens: auto;
+}
+
